--- a/src/assets/css/content-editor.scss
+++ b/src/assets/css/content-editor.scss
@@ -65,3 +65,24 @@ $tt-property-value-color: #88a;
   //margin: 2px;
   //background-color: red;
 }
+
+// Make the slides responsive
+// From https://productforums.google.com/forum/#!topic/docs/tuufSoBoxKc
+.content-google-slides-embed-container {
+  position: relative;
+  padding-bottom: 48.25%; /* 16/9 ratio */
+  padding-top: 30px; /* IE6 workaround*/
+  height: 0;
+  overflow: hidden;
+
+}
+.content-google-slides-embed-container iframe,
+.content-google-slides-embed-container object,
+.content-google-slides-embed-container embed {
+  position: absolute;
+  top: 3%;
+  left: 2%;
+  right: 2%;
+  width: 96%;
+  height: 96%;
+}
