--- a/src/assets/css/content-variables.scss
+++ b/src/assets/css/content-variables.scss
@@ -1,4 +1,11 @@
-
 // Styles for editing "debug" mode
+
+
+// The editbar, at the top of the edit area
+$c-editbar-height: 16;
+$c-editbar-color: #dd0038;
+
+
+// The heading above a widget when editing
 $c-heading-height: 14px;
 $c-heading-font-size: 11px;
