--- a/src/assets/css/content-editor.scss
+++ b/src/assets/css/content-editor.scss
@@ -9,8 +9,8 @@ $tt-property-header-outline: #ccc;
 $tt-property-header-background: #f7f7f7;
 $tt-property-header-color: #666;
 $tt-property-grid: #f0f0f0;
-$tt-property-label-color: #666;
-$tt-property-value-color: #88a;
+$c-property-label-color: #666;
+$c-property-value-color: #88a;
 
 /* Properties Panel */
 .tt-property-header {
@@ -21,7 +21,7 @@ $tt-property-value-color: #88a;
   height: 20px;
   font-size: 13px;
 }
-.tt-properties {
+.c-element-properties {
   display: block;
   margin-bottom: 2px;
 }
@@ -31,7 +31,7 @@ $tt-property-value-color: #88a;
   -webkit-flex-direction: row;
   flex-direction: row;
 }
-.tt-property-label {
+.c-property-label {
   display: block;
   flex: 1 0 0;
   text-align: right;
@@ -42,9 +42,9 @@ $tt-property-value-color: #88a;
   margin-top: 6px;
   font-size: 12px;
   line-height: 18px;
-  color: $tt-property-label-color;
+  color: $c-property-label-color;
 }
-.tt-property-value {
+.c-property-value {
   display: block;
   flex: 2.5 0 0;
   text-align: left;
@@ -54,7 +54,7 @@ $tt-property-value-color: #88a;
   font-size: 12px;
   font-weight: 400;
   line-height: 18px;
-  color: $tt-property-value-color;
+  color: $c-property-value-color;
 }
 .tt-property-footer {
   border-bottom: solid 1px $tt-property-header-outline;
