Add youtube and vimeo widgets
- switch format of Google slides (published versus preview) based on Document ID.
- tidy spacing of embedded documents (videos, slides, etc).

--- a/src/assets/css/content-variables.scss
+++ b/src/assets/css/content-variables.scss
@@ -14,3 +14,8 @@ $c-heading-icon-font-size: 10px;
 // Properties being edited
 $c-property-label-color: #666;
 $c-property-value-color: #88a;
+
+// Margins above and below embeds (slides, videos, etc)
+$c-embed-margin-top: 20px;
+$c-embed-margin-bottom: 20px;
+$c-embed-border-color: #d0d0d0;
