--- a/src/assets/css/content-editor.scss
+++ b/src/assets/css/content-editor.scss
@@ -54,6 +54,27 @@ $tt-property-grid: #f0f0f0;
   line-height: 18px;
   color: $c-property-value-color;
 }
+.c-property-label-and-value {
+  display: block;
+  flex: 2.5 0 0;
+  text-align: left;
+  padding-left: 8px;
+  border-bottom: solid 1px $tt-property-grid;
+  margin: 0px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  color: $c-property-value-color;
+  // padding-left: 10px;
+  // padding-right: 5px;
+  select {
+    // padding-left: 10px;
+    // padding-right: 5px;
+    text-align: right;
+    font-size: 10px;
+    color: $c-property-value-color;
+  }
+}
 .tt-property-footer {
   border-bottom: solid 1px $tt-property-header-outline;
 }
