--- a/src/assets/css/components/content-layout-editor.scss
+++ b/src/assets/css/components/content-layout-editor.scss
@@ -164,14 +164,38 @@
       }
       padding: 0px !important;
       margin: 0px;
+
+      // background-color: #fafafa;
+      .title {
+        border-top: solid 4px #dd0038;
+        //color: #dd0038;
+        padding-top: 2px;
+        background-color: #ffffff;
+        padding-bottom: 2px;
+        //border-bottom: solid 1px #dd0038;
+        border-bottom: solid 1px $tt-property-header-outline;
+        margin-bottom: 2px;
+      }
     }
 
+    // Components (toolbox) pane
     .c-components-pane {
       h1.title {
         font-size: 24px;
       }
       padding: 0px !important;
       margin: 0px;
+      //background-color: #f7f7f7;
+      .title {
+        border-top: solid 4px #dd0038;
+        //color: #dd0038;
+        padding-top: 2px;
+        background-color: #ffffff;
+        padding-bottom: 2px;
+        //border-bottom: solid 1px #dd0038;
+        //border-bottom: solid 1px $tt-property-header-outline;
+        margin-bottom: 2px;
+      }
     }
 
   }
