--- a/src/assets/css/content-editor.scss
+++ b/src/assets/css/content-editor.scss
@@ -1,29 +1,33 @@
 /* Global styles */
 
 @import './content-variables.scss';
+// @import './editor-icons.scss';
 
+// .yarp {
+//   background-image: url("../icons/icon-section-26.png");
+// }
 
 // $tt-property-header-outline: #f7f7f7;
-$tt-property-header-outline: #ccc;
+$tt-property-header-outline: #ccc !default;
 // $tt-property-header-outline: red;
-$tt-property-header-background: #f7f7f7;
-$tt-property-header-color: #666;
-$tt-property-grid: #f0f0f0;
+$tt-property-header-background: #f7f7f7 !default;
+$tt-property-header-color: #666 !default;
+$tt-property-grid: #f0f0f0 !default;
 
 /* Properties Panel */
-.c-properties-pane {
-  background-color: #fafafa;
-  .title {
-    border-top: solid 4px #dd0038;
-    //color: #dd0038;
-    padding-top: 2px;
-    background-color: #ffffff;
-    padding-bottom: 2px;
-    //border-bottom: solid 1px #dd0038;
-    border-bottom: solid 1px $tt-property-header-outline;
-    margin-bottom: 2px;
-  }
-}
+// .c-properties-pane {
+//   background-color: #fafafa;
+//   .title {
+//     border-top: solid 4px #dd0038;
+//     //color: #dd0038;
+//     padding-top: 2px;
+//     background-color: #ffffff;
+//     padding-bottom: 2px;
+//     //border-bottom: solid 1px #dd0038;
+//     border-bottom: solid 1px $tt-property-header-outline;
+//     margin-bottom: 2px;
+//   }
+// }
 .tt-property-header {
   border-top: solid 1px $tt-property-header-outline;
   background-color: $tt-property-header-background;
@@ -141,21 +145,6 @@ $tt-property-grid: #f0f0f0;
   }
 }
 
-// Components (toolbox) pane
-.c-components-pane {
-  //background-color: #f7f7f7;
-  .title {
-    border-top: solid 4px #dd0038;
-    //color: #dd0038;
-    padding-top: 2px;
-    background-color: #ffffff;
-    padding-bottom: 2px;
-    //border-bottom: solid 1px #dd0038;
-    //border-bottom: solid 1px $tt-property-header-outline;
-    margin-bottom: 2px;
-  }
-}
-
 
  /*ZZZZZZZZZZ
 
@@ -258,8 +247,9 @@ ZZZZZZZZZZ*/
   .c-editbar-icons {
     position: absolute;
     right: 5px;
-    padding-top: 1px;
+    margin-top: 1px;
     font-size: 8px;
+    height: 12px;
 
     span:hover {
       color: $c-editbar-color;
@@ -272,6 +262,37 @@ ZZZZZZZZZZ*/
     .c-gutter-right {
       width: $c-property-gutter-right;
     }
+  }
+}
+
+/*
+ *  Icons in the edit bar
+ */
+.c-editbar-icon {
+  display: inline-block;
+  margin-top: 0px;
+  height: 12px;
+  width: 12px;
+  background-size: 12px 12px;
+  cursor: pointer;
+  opacity: 1.0;
+  &:hover {
+    //opacity: 0.4;
+    background-color: white;
+  }
+}
+
+// Icons in the property element header
+.c-property-element-header-icon {
+  display: inline-block;
+  margin-top: 3px;
+  height: 12px;
+  width: 12px;
+  background-size: 12px 12px;
+  cursor: pointer;
+  opacity: 0.4;
+  &:hover {
+    opacity: 1.0;
   }
 }
 
