--- a/src/assets/css/editor-icons.scss
+++ b/src/assets/css/editor-icons.scss
@@ -20,3 +20,28 @@
 .c-icon-vimeo {
   background-image: url("../icons/icon-vimeo-26.png");
 }
+
+/*
+ *  Cut and paste icons, etc.
+ */
+.c-icon-copy {
+  background-image: url("../icons/icons8-copy-24.png");
+}
+.c-icon-cut {
+  background-image: url("../icons/icons8-cut-24.png");
+}
+.c-icon-download {
+  background-image: url("../icons/icons8-download-24.png");
+}
+.c-icon-trash {
+  background-image: url("../icons/icons8-trash-24.png");
+}
+.c-icon-plus {
+  background-image: url("../icons/icons8-plus-math-24.png");
+}
+.c-icon-left {
+  background-image: url("../icons/icons8-left-24.png");
+}
+.c-icon-right {
+  background-image: url("../icons/icons8-right-24.png");
+}
