--- a/src/assets/css/components/content-layout-editor.scss
+++ b/src/assets/css/components/content-layout-editor.scss
@@ -200,3 +200,13 @@
 
   }
 }
+
+.c-content-layout-props {
+
+  .my-buttons {
+    position: absolute;
+    right: 3px;
+    cursor: pointer;
+    font-size: 10px;
+  }
+}
