--- a/src/assets/css/icons-client.scss
+++ b/src/assets/css/icons-client.scss
@@ -45,3 +45,10 @@
 .c-icon-right {
   background-image: url("../icons/icons8-right-24.png");
 }
+
+/*
+ *  Drop area, during drag-and-drop.
+ */
+.c-droparea-background {
+  background-image: url("../drop-bg-1.png");
+}
